load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//nodejs:rules.bzl", "nodejs_binary")

exports_files(
    glob(["**/*.bzl"]),
    visibility = ["//npm/doc:__subpackages__"],
)

exports_files(
    [
        "yarn-audit-runner.sh.tpl",
        "yarn-resolve.sh.tpl",
    ],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "bzl",
    srcs = glob(["**/*.bzl"]),
    visibility = ["//visibility:public"],
    visibility = ["//visibility:public"],
    deps = [
        "//commonjs:bzl",
        "//javascript:bzl",
        "//third-party:repo_bzl",
        "//util:bzl",
        "@bazel_skylib//lib:shell",
    ],
)

nodejs_binary(
    name = "yarn",
    dep = "@better_rules_javascript_npm//@yarnpkg/cli-dist:lib",
    main = "bin/yarn.js",
    node = "//tools/nodejs",
    visibility = ["//visibility:public"],
)
