load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@better_rules_javascript//nodejs:rules.bzl", "nodejs_binary")

package(default_visibility = ["//visibility:public"])

exports_files(
    glob(["**/*.bzl"]),
    visibility = ["//openapi/doc:__subpackages__"],
)

bzl_library(
    name = "bzl",
    srcs = glob(["**/*.bzl"]),
    visibility = ["//visibility:public"],
    deps = [
        "//javascript:bzl",
        "//nodejs:bzl",
        "//typescript:bzl",
        "@rules_file//generate:bzl",
    ],
)

nodejs_binary(
    name = "openapi_typescript",
    dep = "@better_rules_javascript_npm//openapi-typescript:lib",
    main = "bin/cli.js",
    visibility = ["//visibility:public"],
)
