load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    [
        "runner.sh.tpl",
        "runtime.js",
    ] + glob(["**/*.bzl"]),
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "bzl",
    srcs = glob(["**/*.bzl"]),
    visibility = ["//visibility:public"],
    deps = [
        "//commonjs:bzl",
        "//javascript:bzl",
        "//nodejs:bzl",
        "//util:bzl",
        "@bazel_skylib//lib:shell",
    ],
)
