load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    ["runner.sh.tpl"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "bzl",
    srcs = glob(["**/*.bzl"]),
    visibility = ["//visibility:public"],
    deps = [
        "//javascript:bzl",
        "//nodejs:bzl",
        "//typescript:bzl",
        "@rules_file//generate:bzl",
    ],
)

alias(
    name = "prettier_lib",
    actual = "@npm//prettier:lib",
    visibility = ["//visibility:public"],
)
