load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    ["runner.sh.tpl"],
    visibility = ["//visibility:public"],
)

exports_files(
    glob(["**/*.bzl"]),
    visibility = ["//prettier/doc:__subpackages__"],
)

bzl_library(
    name = "bzl",
    srcs = glob(["**/*.bzl"]),
    visibility = ["//visibility:public"],
    deps = [
        "//javascript:bzl",
        "//nodejs:bzl",
        "//typescript:bzl",
        "@rules_file//generate:bzl",
    ],
)

alias(
    name = "prettier_lib",
    actual = "@better_rules_javascript_npm//prettier:lib",
    visibility = ["//visibility:public"],
)

test_suite(
    name = "test",
    tests = ["//angular/test"],
    visibility = ["//:__subpackages__"],
)
