load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

bzl_library(
    name = "bzl",
    srcs = glob(["**/*.bzl"]),
    deps = [
        "//commonjs:bzl",
        "//javascript:bzl",
        "//util:bzl",
        "@rules_proto//proto:defs",
    ],
)
