load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    glob(["**/*.bzl"]),
    visibility = ["//protobuf/doc:__subpackages__"],
)

bzl_library(
    name = "bzl",
    srcs = glob(["**/*.bzl"]),
    visibility = ["//visibility:public"],
    deps = [
        "//commonjs:bzl",
        "//javascript:bzl",
        "//util:bzl",
        "@rules_proto//proto:defs",
    ],
)
