load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

bzl_library(
    name = "bzl",
    srcs = glob(["**/*.bzl"]),
    deps = [
        "//commonjs:bzl",
        "//javascript:bzl",
        "//nodejs:bzl",
        "@bazel_skylib//rules:common_settings",
        "@rules_proto//proto:defs",
    ],
)

test_suite(
    name = "test",
    tests = ["//rollup/test"],
)
