load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    glob(["**/*.bzl"]),
    visibility = ["//rollup/doc:__subpackages__"],
)

bzl_library(
    name = "bzl",
    srcs = glob(["**/*.bzl"]),
    visibility = ["//visibility:public"],
    deps = [
        "//commonjs:bzl",
        "//javascript:bzl",
        "//nodejs:bzl",
        "@bazel_skylib//rules:common_settings",
        "@rules_proto//proto:defs",
    ],
)

test_suite(
    name = "test",
    tests = ["//rollup/test"],
    visibility = ["//:__subpackages__"],
)
