load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//npm:rules.bzl", "yarn_resolve")

package(default_visibility = ["//visibility:public"])

bzl_library(
    name = "bzl",
    srcs = glob(["**/*.bzl"]),
    deps = [
        "//commonjs:bzl",
        "//nodejs:bzl",
        "//npm:bzl",
        "//typescript:bzl",
    ],
)

yarn_resolve(
    name = "resolve_npm",
    output = "npm_data.bzl",
)
