load("@better_rules_javascript//rules/commonjs:rules.bzl", "cjs_root")
load("@better_rules_javascript//rules/protobuf:rules.bzl", "js_protoc")
load("@better_rules_javascript//rules/protobufjs:rules.bzl", configure_js_protojs = "configure_js_proto")
# load("@better_rules_javascript//rules/rollup:rules.bzl", "rollup")

package(default_visibility = ["//visibility:public"])

cjs_root(
    name = "proto_root",
    package_name = "@better_rules_javascript_test/proto",
    descriptor = "proto.package.json",
)

js_protoc(
    name = "js_protoc",
    root = ":proto_root",
    runtime = "@npm//google_protobuf:lib",
)

configure_js_protojs(
    name = "js_protojs",
    dep = "@npm//protobufjs:lib",
)

# rollup(
#     name = "rollup",
#     dep = "@npm//rollup:js",
#     plugins = ["@npm//@rollup/plugin-commonjs:js"],
# )
