load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "tsconfig",
    srcs = ["tsconfig.proto.json"],
)

bzl_library(
    name = "bzl",
    srcs = glob(["**/*.bzl"]),
    deps = [
        "//typescript:bzl",
        "@better_rules_javascript//commonjs:bzl",
        "@better_rules_javascript//javascript:bzl",
        "@better_rules_javascript//nodejs:bzl",
        "@better_rules_javascript//util:bzl",
        "@rules_proto//proto:defs",
    ],
)
