load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    glob(["**/*.bzl"]),
    visibility = ["//ts-proto/doc:__subpackages__"],
)

filegroup(
    name = "tsconfig",
    srcs = ["tsconfig.proto.json"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "bzl",
    srcs = glob(["**/*.bzl"]),
    visibility = ["//visibility:public"],
    deps = [
        "//typescript:bzl",
        "@better_rules_javascript//commonjs:bzl",
        "@better_rules_javascript//javascript:bzl",
        "@better_rules_javascript//nodejs:bzl",
        "@better_rules_javascript//util:bzl",
        "@rules_proto//proto:defs",
    ],
)
