load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    glob(["**/*.bzl"]),
    visibility = ["//typescript-eslint/doc:__subpackages__"],
)

bzl_library(
    name = "bzl",
    srcs = glob(["**/*.bzl"]),
    visibility = ["//visibility:public"],
    deps = [
        "//commonjs:bzl",
        "//javascript:bzl",
        "//typescript:bzl",
        "//util:bzl",
        "@rules_file//generate:bzl",
    ],
)
