load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@better_rules_javascript//commonjs:rules.bzl", "cjs_root")
load("@better_rules_javascript//nodejs:rules.bzl", "nodejs_binary")
load("@better_rules_javascript//javascript:rules.bzl", "js_library")
load(":rules.bzl", "ts_simple_library")

package(default_visibility = ["//visibility:public"])

bzl_library(
    name = "bzl",
    srcs = glob(["**/*.bzl"]),
    deps = [
        "@bazel_skylib//lib:paths",
        "@better_rules_javascript//commonjs:bzl",
        "@better_rules_javascript//javascript:bzl",
        "@better_rules_javascript//nodejs:bzl",
        "@better_rules_javascript//util:bzl",
    ],
)
