load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@better_rules_javascript//commonjs:rules.bzl", "cjs_root")
load("@better_rules_javascript//nodejs:rules.bzl", "nodejs_binary")
load("//javascript:rules.bzl", "js_library")

package(default_visibility = ["//visibility:public"])

bzl_library(
    name = "bzl",
    srcs = glob(["**/*.bzl"]),
    deps = [
        "//commonjs:bzl",
        "//javascript:bzl",
        "//nodejs:bzl",
        "//util:bzl",
        "@bazel_skylib//lib:paths",
        "@bazel_skylib//rules:common_settings",
    ],
)

test_suite(
    name = "test",
    tests = ["//typescript/test"],
)

alias(
    name = "tsc",
    actual = "//typescript/default:tsc",
)
