load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@better_rules_javascript//commonjs:rules.bzl", "cjs_root")
load("@better_rules_javascript//nodejs:rules.bzl", "nodejs_binary")
load("//javascript:rules.bzl", "js_library")

exports_files(
    glob(["**/*.bzl"]),
    visibility = ["//typescript/doc:__subpackages__"],
)

bzl_library(
    name = "bzl",
    srcs = glob(["**/*.bzl"]),
    visibility = ["//visibility:public"],
    deps = [
        "//commonjs:bzl",
        "//javascript:bzl",
        "//nodejs:bzl",
        "//util:bzl",
        "@bazel_skylib//lib:paths",
        "@bazel_skylib//rules:common_settings",
    ],
)

test_suite(
    name = "test",
    tests = ["//typescript/test"],
    visibility = ["//:__subpackages__"],
)

alias(
    name = "tsc",
    actual = "//typescript/default:tsc",
    visibility = ["//visibility:public"],
)
