load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "skip_package_check",
    srcs = ["skip-package-check.js"],
)

filegroup(
    name = "server_runner",
    srcs = ["server-runner.sh.tpl"],
)

bzl_library(
    name = "bzl",
    srcs = glob(["*.bzl"]),
    deps = [
        "//commonjs:bzl",
        "//javascript:bzl",
        "//nodejs:bzl",
        "//typescript:bzl",
        "@rules_proto//proto:defs",
    ],
)
