load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    [
        "skip-package-check.js",
        "server-runner.sh.tpl",
    ],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "bzl",
    srcs = glob(["*.bzl"]),
    visibility = ["//visibility:public"],
    deps = [
        "//commonjs:bzl",
        "//javascript:bzl",
        "//nodejs:bzl",
        "//typescript:bzl",
        "@rivet_bazel_util//bazel:bzl",
        "@rules_proto//proto:defs",
    ],
)

test_suite(
    name = "test",
    tests = ["//webpack/test"],
    visibility = ["//:__subpackages__"],
)
