load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    [
        "skip-package-check.js",
        "server-runner.sh.tpl",
    ],
    visibility = ["//visibility:public"],
)

exports_files(
    glob(["**/*.bzl"]),
    visibility = ["//webpack/doc:__subpackages__"],
)

bzl_library(
    name = "bzl",
    srcs = glob(["*.bzl"]),
    visibility = ["//visibility:public"],
    deps = [
        "//commonjs:bzl",
        "//javascript:bzl",
        "//nodejs:bzl",
        "//typescript:bzl",
        "@rivet_bazel_util//bazel:bzl",
        "@rules_proto//proto:defs",
    ],
)

test_suite(
    name = "test",
    tests = ["//webpack/test"],
    visibility = ["//:__subpackages__"],
)

alias(
    name = "webpack",
    actual = "//webpack/default:webpack",
    visibility = ["//visibility:public"],
)

alias(
    name = "webpack_cli",
    actual = "//webpack/default:webpack_cli",
    visibility = ["//visibility:public"],
)

alias(
    name = "webpack_dev_server",
    actual = "//webpack/default:webpack_dev_server",
    visibility = ["//visibility:public"],
)
