load("@better_rules_javascript//ts-proto:rules.bzl", "ts_proto_export")
load("@better_rules_javascript//typescript:rules.bzl", "simple_ts_library")
load("//commonjs:rules.bzl", "cjs_root")
load("//rules:rules.bzl", "ts_proto_libraries")

package(default_visibility = ["//visibility:public"])

cjs_root(
    name = "root",
    package_name = "@better_rules_javascript/worker",
    descriptors = ["package.json"],
)

cjs_root(
    name = "bazel_root",
    package_name = "@bazel_tools",
    descriptors = ["package.json"],
)

ts_proto_libraries(
    name = "proto_lib",
    root = ":bazel_root",
    deps = ["@bazel_tools//src/main/protobuf:worker_protocol_proto"],
)

ts_proto_export(
    name = "worker_proto_lib",
    dep = "@bazel_tools//src/main/protobuf:worker_protocol_proto",
    lib = ":proto_lib",
)

simple_ts_library(
    name = "lib",
    srcs = glob(["src/**/*.ts"]),
    compiler = "//rules:simple_tsc",
    compiler_options = [
        "--esModuleInterop",
        "--lib",
        "es2019",
        "--module",
        "commonjs",
        "--moduleResolution",
        "node",
        "--target",
        "es2019",
    ],
    root = ":root",
    strip_prefix = "better_rules_javascript/worker/src",
    deps = [
        ":worker_proto_lib",
        "@better_rules_javascript_npm//protobufjs:lib",
        "@better_rules_javascript_npm//types_node:lib",
    ],
)
