load("//commonjs:rules.bzl", "cjs_root")
load("//javascript:rules.bzl", "js_library")
load("//typescript:rules.bzl", "ts_library")

ts_library(
    name = "lib",
    srcs = glob(["src/**/*.ts"]),
    compiler = "//tools/typescript:tsc",
    root = ":root",
    deps = [
        "@better_rules_javascript//bazel/worker:lib",
        "@better_rules_javascript//commonjs/package:lib",
        "@better_rules_javascript//nodejs/fs-linker:lib",
        "@better_rules_javascript//util/json:lib",
        "@better_rules_javascript_npm//@types/argparse:lib",
        "@better_rules_javascript_npm//@types/node:lib",
        "@better_rules_javascript_npm//argparse:lib",
    ],
    visibility = ["//visibility:public"],
)

cjs_root(
    name = "root",
    package_name = "@better-rules-javascript/angular-js-compiler",
    descriptors = ["package.json"],
    visibility = ["//visibility:public"],
)

js_library(
    name = "tsconfig",
    srcs = ["tsconfig.json"],
    root = ":root",
)
