load("//commonjs:rules.bzl", "cjs_root")
load("//nodejs:rules.bzl", "nodejs_binary")
load("//javascript:rules.bzl", "js_library")
load("//typescript:rules.bzl", "ts_library")

package(default_visibility = ["//visibility:public"])

cjs_root(
    name = "root",
    package_name = "@better-rules-javascript/angular-resource-compiler",
    descriptors = ["package.json"],
)

js_library(
    name = "tsconfig",
    srcs = ["tsconfig.json"],
    root = ":root",
    deps = ["//rules:tsconfig"],
)

ts_library(
    name = "lib",
    srcs = glob(["src/**/*.ts"]),
    compiler = "//rules:tsc",
    config = "tsconfig.json",
    config_dep = ":tsconfig",
    root = ":root",
    deps = [
        "//bazel/worker:lib",
        "@better_rules_javascript_npm//@types/argparse:lib",
        "@better_rules_javascript_npm//argparse:lib",
    ],
)

nodejs_binary(
    name = "bin",
    dep = ":lib",
    main = "src/main.js",
)
