filegroup(
    name = "bazel",
    srcs = glob(["bazel/**/*"]),
    data = ["@better_rules_javascript_files//:common"],
)

sh_test(
    name = "basic",
    size = "large",
    srcs = ["test_basic.sh"],
    data = [":bazel"],
    tags = ["local"],
)

sh_test(
    name = "material",
    size = "large",
    srcs = ["test_material.sh"],
    data = [":bazel"],
    tags = ["local"],
)

test_suite(
    name = "test",
)
