load("@better_rules_javascript//typescript:rules.bzl", "ts_library", "tsconfig")
load("//commonjs:rules.bzl", "cjs_root")

package(default_visibility = ["//visibility:public"])

cjs_root(
    name = "root",
    package_name = "@better-rules-javascript/bazel-runfiles",
    descriptors = ["package.json"],
)

tsconfig(
    name = "tsconfig",
    src = "tsconfig.json",
    dep = "//rules:tsconfig",
    root = ":root",
)

ts_library(
    name = "lib",
    srcs = glob(["src/**/*.ts"]),
    compiler = "//rules:tsc",
    config = ":tsconfig",
    root = ":root",
    deps = [
        "@better_rules_javascript_npm//@types/node:lib",
    ],
)
