load("//commonjs:rules.bzl", "cjs_root")
load("//javascript:rules.bzl", "js_library")
load("//typescript:rules.bzl", "ts_library")

package(default_visibility = ["//visibility:public"])

cjs_root(
    name = "root",
    package_name = "@better-rules-javascript/bazel-runfiles",
    descriptors = ["package.json"],
)

js_library(
    name = "tsconfig",
    srcs = ["tsconfig.json"],
    root = ":root",
    deps = ["//rules:tsconfig"],
)

ts_library(
    name = "lib",
    srcs = glob(["src/**/*.ts"]),
    compiler = "//rules:tsc",
    config = "tsconfig.json",
    config_dep = ":tsconfig",
    root = ":root",
    deps = [
        "@better_rules_javascript_npm//@types/node:lib",
    ],
)
